--- a/app/src/main/res/layout/sdes_cypher_tab.xml
+++ b/app/src/main/res/layout/sdes_cypher_tab.xml
@@ -7,29 +7,29 @@
 
     <TextView
         android:id="@+id/tViewInputSDES"
-        android:layout_width="331dp"
-        android:layout_height="70dp"
-        android:layout_alignEnd="@+id/eTextNivelSDES"
+        android:layout_width="329dp"
+        android:layout_height="68dp"
+        android:layout_alignEnd="@+id/etNivelSDES"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="132dp"
+        android:layout_marginTop="139dp"
+        android:layout_marginEnd="-6dp"
         android:text="TextView" />
 
     <Button
-        android:id="@+id/btnDescifrar"
+        android:id="@+id/btnCifrarSDES"
         android:layout_width="143dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignStart="@+id/tViewOutputSDES"
-        android:layout_marginBottom="214dp"
-        android:text="Descifrar" />
+        android:layout_alignBottom="@+id/etNivelSDES"
+        android:layout_alignStart="@+id/tViewInputSDES"
+        android:text="Cifrar" />
 
     <EditText
-        android:id="@+id/eTextNivelSDES"
+        android:id="@+id/etNivelSDES"
         android:layout_width="138dp"
-        android:layout_height="42dp"
+        android:layout_height="wrap_content"
         android:layout_alignEnd="@+id/tViewOutputSDES"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="206dp"
+        android:layout_marginBottom="209dp"
         android:ems="10"
         android:inputType="number" />
 
@@ -43,7 +43,7 @@
         android:text="TextView" />
 
     <Button
-        android:id="@+id/btnOpenFile"
+        android:id="@+id/btnReadFileSDES"
         android:layout_width="152dp"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
@@ -53,9 +53,9 @@
 
     <TextView
         android:id="@+id/lblLlave"
-        android:layout_width="139dp"
-        android:layout_height="29dp"
-        android:layout_above="@+id/btnDescifrar"
-        android:layout_alignStart="@+id/eTextNivelSDES"
+        android:layout_width="137dp"
+        android:layout_height="30dp"
+        android:layout_above="@+id/btnCifrarSDES"
+        android:layout_alignStart="@+id/etNivelSDES"
         android:text="Llave para cifrar:" />
 </RelativeLayout>
