--- a/app/src/main/res/layout/sdes_decypher_tab.xml
+++ b/app/src/main/res/layout/sdes_decypher_tab.xml
@@ -15,21 +15,20 @@
         android:text="TextView" />
 
     <Button
-        android:id="@+id/btnDescifrar"
+        android:id="@+id/btnDescifrarSDES"
         android:layout_width="143dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignStart="@+id/tViewOutputSDES"
-        android:layout_marginBottom="214dp"
+        android:layout_alignBottom="@+id/eTextNivelSDES"
+        android:layout_alignStart="@+id/tViewInputSDES"
         android:text="Descifrar" />
 
     <EditText
         android:id="@+id/eTextNivelSDES"
         android:layout_width="138dp"
-        android:layout_height="42dp"
+        android:layout_height="58dp"
         android:layout_alignEnd="@+id/tViewOutputSDES"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="206dp"
+        android:layout_marginBottom="208dp"
         android:ems="10"
         android:inputType="number" />
 
@@ -43,7 +42,7 @@
         android:text="TextView" />
 
     <Button
-        android:id="@+id/btnOpenFile"
+        android:id="@+id/btnOpenFileSDES"
         android:layout_width="152dp"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
@@ -53,9 +52,10 @@
 
     <TextView
         android:id="@+id/lblLlave"
-        android:layout_width="139dp"
-        android:layout_height="29dp"
-        android:layout_above="@+id/btnDescifrar"
+        android:layout_width="136dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
         android:layout_alignStart="@+id/eTextNivelSDES"
+        android:layout_marginTop="225dp"
         android:text="Llave para cifrar:" />
 </RelativeLayout>
