UI modified for rsa

--- a/app/src/main/res/layout/cypher_tab.xml
+++ b/app/src/main/res/layout/cypher_tab.xml
@@ -6,10 +6,10 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/tViewInputSDES"
+        android:id="@+id/tViewInputRSA"
         android:layout_width="329dp"
         android:layout_height="68dp"
-        android:layout_alignEnd="@+id/etNivelSDES"
+        android:layout_alignEnd="@+id/etP"
         android:layout_alignParentTop="true"
         android:layout_marginTop="139dp"
         android:layout_marginEnd="-6dp"
@@ -19,21 +19,21 @@
         android:id="@+id/btnDescifrar"
         android:layout_width="143dp"
         android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/tViewInputSDES"
+        android:layout_alignStart="@+id/tViewInputRSA"
         android:layout_centerVertical="true"
         android:text="Cifrar" />
 
     <EditText
-        android:id="@+id/etNivelSDES"
+        android:id="@+id/etP"
         android:layout_width="138dp"
         android:layout_height="42dp"
-        android:layout_alignEnd="@+id/tViewOutputSDES"
+        android:layout_alignEnd="@+id/tViewOutputRSA"
         android:layout_centerVertical="true"
         android:ems="10"
         android:inputType="number" />
 
     <TextView
-        android:id="@+id/tViewOutputSDES"
+        android:id="@+id/tViewOutputRSA"
         android:layout_width="323dp"
         android:layout_height="181dp"
         android:layout_alignParentBottom="true"
