--- a/app/src/main/res/layout/rsa_decypher_tab.xml
+++ b/app/src/main/res/layout/rsa_decypher_tab.xml
@@ -6,37 +6,27 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/tViewInputSDES"
+        android:id="@+id/tViewInputRSA"
         android:layout_width="331dp"
-        android:layout_height="70dp"
-        android:layout_alignEnd="@+id/eTextNivelSDES"
+        android:layout_height="100dp"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="132dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="94dp"
         android:text="TextView" />
 
     <Button
         android:id="@+id/btnDescifrar"
         android:layout_width="143dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignStart="@+id/tViewOutputSDES"
-        android:layout_marginBottom="214dp"
+        android:layout_alignParentEnd="true"
+        android:layout_centerVertical="true"
+        android:layout_marginEnd="38dp"
         android:text="Descifrar" />
 
-    <EditText
-        android:id="@+id/eTextNivelSDES"
-        android:layout_width="138dp"
-        android:layout_height="42dp"
-        android:layout_alignEnd="@+id/tViewOutputSDES"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="206dp"
-        android:ems="10"
-        android:inputType="number" />
-
     <TextView
-        android:id="@+id/tViewOutputSDES"
+        android:id="@+id/tViewOutputRSA"
         android:layout_width="323dp"
-        android:layout_height="181dp"
+        android:layout_height="124dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="16dp"
@@ -51,11 +41,12 @@
         android:layout_marginTop="22dp"
         android:text="Buscar documento" />
 
-    <TextView
-        android:id="@+id/lblLlave"
-        android:layout_width="139dp"
-        android:layout_height="29dp"
-        android:layout_above="@+id/btnDescifrar"
-        android:layout_alignStart="@+id/eTextNivelSDES"
-        android:text="Llave para cifrar:" />
+    <Button
+        android:id="@+id/btnLlave"
+        android:layout_width="136dp"
+        android:layout_height="wrap_content"
+        android:layout_alignStart="@+id/tViewInputRSA"
+        android:layout_centerVertical="true"
+        android:text="LLave" />
+
 </RelativeLayout>
