--- a/app/src/main/res/layout/rsa_cypher_tab.xml
+++ b/app/src/main/res/layout/rsa_cypher_tab.xml
@@ -6,44 +6,43 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/tViewInputSDES"
+        android:id="@+id/tViewInputRSA"
         android:layout_width="329dp"
-        android:layout_height="68dp"
-        android:layout_alignEnd="@+id/etNivelSDES"
+        android:layout_height="81dp"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="139dp"
-        android:layout_marginEnd="-6dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="109dp"
         android:text="TextView" />
 
     <Button
-        android:id="@+id/btnCifrarSDES"
+        android:id="@+id/btnCifrarRSA"
         android:layout_width="143dp"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/etNivelSDES"
-        android:layout_alignStart="@+id/tViewInputSDES"
+        android:layout_alignParentBottom="true"
+        android:layout_alignStart="@+id/tViewInputRSA"
+        android:layout_marginBottom="170dp"
         android:text="Cifrar" />
 
     <EditText
-        android:id="@+id/etNivelSDES"
-        android:layout_width="138dp"
+        android:id="@+id/etP"
+        android:layout_width="105dp"
         android:layout_height="wrap_content"
-        android:layout_alignEnd="@+id/tViewOutputSDES"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="209dp"
+        android:layout_alignStart="@+id/tViewInputRSA"
+        android:layout_centerVertical="true"
         android:ems="10"
         android:inputType="number" />
 
     <TextView
-        android:id="@+id/tViewOutputSDES"
+        android:id="@+id/tViewOutputRSA"
         android:layout_width="323dp"
-        android:layout_height="181dp"
+        android:layout_height="124dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="16dp"
         android:text="TextView" />
 
     <Button
-        android:id="@+id/btnReadFileSDES"
+        android:id="@+id/btnReadFileRSA"
         android:layout_width="152dp"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
@@ -52,10 +51,35 @@
         android:text="Buscar documento" />
 
     <TextView
-        android:id="@+id/lblLlave"
-        android:layout_width="137dp"
+        android:id="@+id/lblP"
+        android:layout_width="53dp"
         android:layout_height="30dp"
-        android:layout_above="@+id/btnCifrarSDES"
-        android:layout_alignStart="@+id/etNivelSDES"
-        android:text="Llave para cifrar:" />
+        android:layout_above="@+id/etP"
+        android:layout_alignStart="@+id/tViewInputRSA"
+        android:text="P:" />
+
+    <TextView
+        android:id="@+id/lblQ"
+        android:layout_width="45dp"
+        android:layout_height="33dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignTop="@+id/lblP"
+        android:layout_marginStart="142dp"
+        android:text="Q:" />
+
+    <EditText
+        android:id="@+id/etQ"
+        android:layout_width="104dp"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:ems="10"
+        android:inputType="number" />
+
+    <Button
+        android:id="@+id/btnLlaves"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/etP"
+        android:layout_toEndOf="@+id/etQ"
+        android:text="Crear llaves" />
 </RelativeLayout>
