--- a/app/src/main/res/layout/sdes_decypher_tab.xml
+++ b/app/src/main/res/layout/sdes_decypher_tab.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/tViewInputSDES"
+        android:id="@+id/tViewInputRSA"
         android:layout_width="331dp"
         android:layout_height="70dp"
         android:layout_alignEnd="@+id/eTextNivelSDES"
@@ -19,21 +19,21 @@
         android:layout_width="143dp"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/eTextNivelSDES"
-        android:layout_alignStart="@+id/tViewInputSDES"
+        android:layout_alignStart="@+id/tViewInputRSA"
         android:text="Descifrar" />
 
     <EditText
         android:id="@+id/eTextNivelSDES"
         android:layout_width="138dp"
         android:layout_height="58dp"
-        android:layout_alignEnd="@+id/tViewOutputSDES"
+        android:layout_alignEnd="@+id/tViewOutputRSA"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="208dp"
         android:ems="10"
         android:inputType="number" />
 
     <TextView
-        android:id="@+id/tViewOutputSDES"
+        android:id="@+id/tViewOutputRSA"
         android:layout_width="323dp"
         android:layout_height="181dp"
         android:layout_alignParentBottom="true"
@@ -51,7 +51,7 @@
         android:text="Buscar documento" />
 
     <TextView
-        android:id="@+id/lblLlave"
+        android:id="@+id/lblP"
         android:layout_width="136dp"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
