--- a/app/src/main/res/layout/cypher_tab.xml
+++ b/app/src/main/res/layout/cypher_tab.xml
@@ -16,7 +16,7 @@
         android:text="TextView" />
 
     <Button
-        android:id="@+id/btnDescifrar"
+        android:id="@+id/btnDescifrarRSA"
         android:layout_width="143dp"
         android:layout_height="wrap_content"
         android:layout_alignStart="@+id/tViewInputRSA"
