--- a/app/src/main/res/layout/decypher_tab.xml
+++ b/app/src/main/res/layout/decypher_tab.xml
@@ -15,7 +15,7 @@
         android:text="TextView" />
 
     <Button
-        android:id="@+id/btnDescifrar"
+        android:id="@+id/btnDescifrarRSA"
         android:layout_width="143dp"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
@@ -55,7 +55,7 @@
         android:id="@+id/lblP"
         android:layout_width="139dp"
         android:layout_height="29dp"
-        android:layout_above="@+id/btnDescifrar"
+        android:layout_above="@+id/btnDescifrarRSA"
         android:layout_alignStart="@+id/eTextNivelSDES"
         android:text="Llave para cifrar:" />
 </RelativeLayout>
